...

export enum TabType {
  Home = 'home',
  Explorer = 'explorer',
  Vendre = 'vendre',
  Favoris = 'favoris',
  Profil = 'profil',
}

export interface BottomTabBarProps {
  activeTab: TabType;
  onTabPress: (tab: TabType, event: GestureResponderEvent) => void;
  variant: 'light' | 'dark';
...
